--- a/index.html
+++ b/index.html
@@ -704,15 +704,7 @@ h1, h2 {
 
 It feels unreal that we’ve been talking for 409 days already. More than a year of conversations, laughter, late-night thoughts, random stories, and moments that slowly became part of my everyday life. Time passed so naturally with you that I didn’t even notice how deeply you had become someone important to me.
 
-I want to be honest with you. Before I met you, I had talked to many girls. But none of them were like you. None of them made me feel the way you do. There is something about you. your kindness, your warmth, your mind, your energy .that feels rare and magical. You didn’t just enter my life; you changed the atmosphere of it.
-
-You know about my insecurity, especially about my height. It’s something I’ve always been self-conscious about. Yet you never made me feel small. Instead, you made me feel seen, accepted, and valued exactly as I am. That means more to me than you probably realize. With you, I don’t feel judged. I feel safe. I feel enough.
-
-I also want to apologize sincerely for asking you to send your picture and for making you feel pressured in any way. I asked because I like you — maybe more than I knew how to express at the time — but that’s not an excuse to make you uncomfortable. You deserve respect, and I promise I won’t ask you again. What we have is deeper than a picture anyway. It’s connection, understanding, and the way our conversations feel like home.
-
-Somewhere between day one and day 409, my feelings grew into something undeniable. What started as simple interest turned into admiration. Admiration turned into attachment. And now, with all honesty and without fear, I can say this:
-
-I am in love with you.</p>
+I want to be honest with you. Before I met you, I had talked to many girls. But none of them were like you. None of them made me feel the way you do. There is something about you. your kindness, your warmth, your mind, your energy .that feels rare and magical. Like i told you, youre like a poem to me. your face brings me amile to my face and your small cute nose is my favorite of all. We talked a lot but i understand that you havent become comfortable with me. Sorrry for asking pictures bcz i wanted use your pic for this. Im not good at coding, and its not perfect website but i tried my best, this coding took me a lot of time to me and i am so happy to have you as my life partner and i wont ask you to be mine but it would be better if you become mine. Imma tell you right now, last year on valentines day...we officially start dating. Today is valentines day too. but i love evrything about you, your laugh, your childish, your warmth, your kindness, your cringeness and everything. You are an so independent woman and strong woman and you inspire me a lot but be childish with me. Im not the best boyfriend but i can be a great life partner. I can officially say that I am in love with you.</p>
     </div>
 
     <button class="next-btn">Next</button>
@@ -776,7 +768,7 @@ I am in love with you.</p>
 
 <!-- SLIDE 6 -->
 <section id="slide6" class="slide">
-    <h1 class="valentine-title">Will you be my Valentine?</h1>
+    <h1 class="valentine-title">Will you be my Valentine and Shall we continue date?</h1>
 
     <div class="buttons">
         <button onclick="yes()">Yes</button>
@@ -785,7 +777,7 @@ I am in love with you.</p>
 
     <div class="fireworks" id="fireworks"></div>
     <div class="final-message" id="finalMessage">
-        Happy Valentine’s Day Beautiful ❤️
+        Happy Valentine’s Day Katya ❤️
     </div>
     <audio src="fireworks.mp3" id="firework" loop></audio>
 </section>
@@ -1013,4 +1005,5 @@ function randomColor() {
 
 </body>
 </html>
+
 
